Bug fixes and minor revisions

--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
     </nav>
 
     <div class="container">
-
+        <div id="logo"><img src="img/logo.png" alt="Productivity Matrix" /></div>
         <div id="notices">
             <h1 id="welcome">Welcome, demo.</h1>
             <p id="taskcount">Let's make today productive!</p>
@@ -170,7 +170,7 @@
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
-                                        <h4 class="modal-title" id="planModalLabel">Add Urgent Task</h4>
+                                        <h4 class="modal-title" id="planModalLabel">Add Planned Task</h4>
                                     </div>
                                     <div class="modal-body">
                                       <form id="plan" name="plan" method="POST">
@@ -238,7 +238,7 @@
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
-                                        <h4 class="modal-title" id="eliminateModalLabel">Add Urgent Task</h4>
+                                        <h4 class="modal-title" id="eliminateModalLabel">Add Eliminate Task</h4>
                                     </div>
                                     <div class="modal-body">
                                       <form id="eliminate" name="eliminate" method="POST">
@@ -257,30 +257,7 @@
                             </div>
                         </div>
                     </div>
-
-        <nav class="navbar navbar-default navbar-fixed-bottom">
-            <div class="container">
-                <div class="dropup">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
-                        Tasks
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <li>
-                            <a href="#">Active</a>
-                        </li>
-                        <li>
-                            <a href="#">Completed</a>
-                        </li>
-                        <li>
-                            <a href="#">Deleted</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
+                    <p class="copyright">&copy; 2017 Matrix Productivity Technologies</p>
     </div>
     <!-- /.container -->
 
