--- a/profile.html
+++ b/profile.html
@@ -70,7 +70,7 @@
     </nav>
 
     <div class="container">
-
+        <div id="logo"><img src="img/logo.png" alt="Productivity Matrix" /></div>
         <h1>Profile</h1>
   
         <form name="profile">
@@ -93,30 +93,9 @@
                 <button type="submit" class="btn btn-primary" onclick="saveProfile()">Update</button>
         </form>
         <br>
-        <p><a href="home2.html">Go Back</a></p>
+        <p><a href="home.html">Go Back</a></p>
         
-        <nav class="navbar navbar-default navbar-fixed-bottom">
-            <div class="container">
-                <div class="dropup">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
-                        Tasks
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <li>
-                            <a href="#">Active</a>
-                        </li>
-                        <li>
-                            <a href="#">Completed</a>
-                        </li>
-                        <li>
-                            <a href="#">Deleted</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <p class="copyright">&copy; 2017 Matrix Productivity Technologies</p>
 
     </div>
     <!-- /.container -->
