--- a/login.html
+++ b/login.html
@@ -23,8 +23,8 @@
   <body>
 
     <div class="container">
-      <div id="logo"><img src="img/logo.png" alt="Productivity Matrix" /></div>
-      <form id="login" class="form-signin" action="home.html" method="POST" onsubmit="return validateLogin()">
+      <h1 id="title">Productivity Matrix</h1>
+      <form id="login" class="form-signin" action="home.html" method="GET" onsubmit="return validateLogin()">
         <h2 class="form-signin-heading">Please sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
