--- a/register.html
+++ b/register.html
@@ -23,8 +23,8 @@
   <body>
 
     <div class="container">
-      <h1 id="title">Productivity Matrix</h1>
-      <form id="login" class="form-signin" action="index.html" method="POST" onsubmit="return validRegistration()">
+      <div id="logo"><img src="img/logo.png" alt="Productivity Matrix" /></div>
+      <form id="login" class="form-signin" action="index.html" method="GET" onsubmit="return validRegistration()">
         <h2 class="form-signin-heading">Register today.</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
