--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="container">
       <div id="logo"><img src="img/logo.png" alt="Productivity Matrix" /></div>
-      <form id="login" class="form-signin" action="home.html" method="POST" onsubmit="return validateLogin()">
+      <form id="login" class="form-signin" action="home.html" method="GET" onsubmit="return validateLogin()">
         <h2 class="form-signin-heading">Please sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
