--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
     </nav>
 
     <div class="container">
-        <div id="logo"><img src="img/logo.png" alt="Productivity Matrix" /></div>
+        <div id="logo"><a href="home.html"><img src="img/logo.png" alt="Productivity Matrix" /></a></div>
         <div id="notices">
             <h1 id="welcome">Welcome, demo.</h1>
             <p id="taskcount">Let's make today productive!</p>
