--- a/profile.html
+++ b/profile.html
@@ -70,7 +70,7 @@
     </nav>
 
     <div class="container">
-        <div id="logo"><img src="img/logo.png" alt="Productivity Matrix" /></div>
+        <div id="logo"><a href="home.html"><img src="img/logo.png" alt="Productivity Matrix" /></a></div>
         <h1>Profile</h1>
   
         <form name="profile">
