--- a/settings.html
+++ b/settings.html
@@ -71,7 +71,7 @@
 
     <div class="container">
 
-        <div id="logo"><img src="img/logo.png" alt="Productivity Matrix" /></div>
+        <div id="logo"><a href="home.html"><img src="img/logo.png" alt="Productivity Matrix" /></a></div>
         <h1>Settings</h1>
 
         <form name="settings">
