--- a/home.html
+++ b/home.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110491530-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-110491530-1');
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +18,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-
     <title>Productivity Matrix - Dashboard</title>
 
     <!-- Bootstrap core CSS -->
@@ -269,7 +277,7 @@
                             <div class="form-group">
                                 <label for="priority">Priority Value</label>
                                 <input type="text" class="form-control" id="priority" placeholder="Enter priority value..." required>
-                            </div>                            
+                            </div>
                             <div class="form-group">
                                 <label for="date">Date</label>
                                 <input type="date" class="form-control" id="date" required>
@@ -305,7 +313,7 @@
                             <div class="form-group">
                                 <label for="priority">Priority Value</label>
                                 <input type="text" class="form-control" id="priority" placeholder="Enter priority value..." required>
-                            </div>                            
+                            </div>
                             <div class="form-group">
                                 <label for="date">Date</label>
                                 <input type="date" class="form-control" id="date">
@@ -341,7 +349,7 @@
                             <div class="form-group">
                                 <label for="name">Task</label>
                                 <input type="text" class="form-control" id="name" placeholder="Enter task name..." required>
-                            </div>                        
+                            </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -368,7 +376,6 @@
         </nav>
     </div>
     <!-- /.container -->
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
