--- a/index.html
+++ b/index.html
@@ -1,53 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
-    <title>Productivity Matrix - Login</title>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110491530-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    gtag('config', 'UA-110491530-1');
+  </script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../../favicon.ico">
+  <title>Productivity Matrix - Login</title>
 
-    <!-- Custom javascript for functionality -->
-    <script src="js/template.js"></script>
+  <!-- Bootstrap core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/signin.css" rel="stylesheet">
-  </head>
+  <!-- Custom javascript for functionality -->
+  <script src="js/template.js"></script>
 
-  <body>
+  <!-- Custom styles for this template -->
+  <link href="css/signin.css" rel="stylesheet">
+</head>
 
-    <div class="container">
-      <div id="logo"><img src="img/logo.png" alt="Productivity Matrix" /></div>
-      <form id="login" class="form-signin" action="home.html" method="GET" onsubmit="return validateLogin()">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
-      <p class="register">Need an account? <a href="register.html">Register now.</a></p>
-      <p id="notification"></p>
-      <p style="text-align: center"><strong>For demo purposes, please use:</strong></p>
-      <p style="text-align: center">Username: demo@test.com<br>Password: demo</p>
+<body>
+  <div class="container">
+    <div id="logo">
+      <img src="img/logo.png" alt="Productivity Matrix" />
+    </div>
+    <form id="login" class="form-signin" action="home.html" method="GET" onsubmit="return validateLogin()">
+      <h2 class="form-signin-heading">Please sign in</h2>
+      <label for="inputEmail" class="sr-only">Email address</label>
+      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
+      </div>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
+    <p class="register">Need an account?
+      <a href="register.html">Register now.</a>
+    </p>
+    <p id="notification"></p>
+    <p style="text-align: center">
+      <strong>For demo purposes, please use:</strong>
+    </p>
+    <p style="text-align: center">Username: demo@test.com
+      <br>Password: demo</p>
 
-    </div> <!-- /container -->
+  </div>
+  <!-- /container -->
 
-
-    <!-- Bootstrap core JavaScript
+  <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="js/ie10-viewport-bug-workaround.js"></script>
+</body>
+
 </html>
