--- a/home.html
+++ b/home.html
@@ -440,7 +440,7 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
-    <script src="js/handlebars-v4.0.11"></script>
+    <script src="js/handlebars-v4.0.11.js"></script>
 
 </body>
 
