--- a/home.html
+++ b/home.html
@@ -83,15 +83,33 @@
         var showAlternative = localStorage.getItem("showAlternate");
 
         if (showAlternative === "true") {
-            document.querySelector("#urgentBox .header h2").innerText = "Urgent";
+
+            document.querySelector("#urgentBox .header h2").innerHTML = "Urgent";
+            document.querySelector("#urgentModalLabel").innerHTML = "Add Urgent Task";
+
             document.querySelector("#planBox .header h2").innerHTML = "Plan";
+            document.querySelector("#planModalLabel").innerHTML = "Add Planned Task";
+
             document.querySelector("#delegateBox .header h2").innerHTML = "Delegate";
+            document.querySelector("#delegateModalLabel").innerHTML = "Add Delegate Task";
+
             document.querySelector("#eliminateBox .header h2").innerHTML = "Eliminate";
+            document.querySelector("#eliminateModalLabel").innerHTML = "Add Eliminate Task";
+
         } else {
+            
             document.querySelector("#urgentBox .header h2").innerHTML = "Urgent and Important";
+            document.querySelector("#urgentModalLabel").innerHTML = "Add Urgent and Important Task";
+
             document.querySelector("#planBox .header h2").innerHTML = "Important and Not Urgent";
+            document.querySelector("#urgentModalLabel").innerHTML = "Add Important and Not Urgent Task";
+
             document.querySelector("#delegateBox .header h2").innerHTML = "Urgent and Not Important";
+            document.querySelector("#urgentModalLabel").innerHTML = "Add Urgent and Not Important Task";
+
             document.querySelector("#eliminateBox .header h2").innerHTML = "Not Important and Not Urgent";
+            document.querySelector("#urgentModalLabel").innerHTML = "Add Not Important and Not Urgent Task";
+
         }
 
     });
