--- a/home.html
+++ b/home.html
@@ -145,7 +145,7 @@
         <div id="matrix">
             <div id="urgentBox" class="box urgent">
                 <div class="header">
-                    <h2></h2>
+                    <h2>Urgent</h2>
                     <h3>Do now.</h3>
                 </div>
                 <div class="body">
@@ -177,7 +177,7 @@
             </div>
             <div id="planBox" class="box plan">
                 <div class="header">
-                    <h2></h2>
+                    <h2>Plan</h2>
                     <h3>Plan for the future.</h3>
                 </div>
                 <div class="body">
@@ -209,7 +209,7 @@
             </div>
             <div id="delegateBox" class="box delegate">
                 <div class="header">
-                    <h2></h2>
+                    <h2>Delegate</h2>
                     <h3>Get help from others.</h3>
                 </div>
                 <div class="body">
@@ -241,7 +241,7 @@
             </div>
             <div id="eliminateBox" class="box eliminate">
                 <div class="header">
-                    <h2></h2>
+                    <h2>Eliminate</h2>
                     <h3>Things to stop doing.</h3>
                 </div>
                 <div class="body">
